@@ -5,6 +5,10 @@
 
  Changes between 0.9.1c and 0.9.2
 
+  *) Really fix the ASN1 IMPLICIT bug this time... Partial support for private
+     key usage extension and fuller support for authority key id.
+     [Steve Henson]
+
   *) Add OAEP encryption for the OpenSSL crypto library. OAEP is the improved
      padding method for RSA, which is recommended for new applications in PKCS
      #1 v2.0 (RFC 2437, October 1998).
@@ -25,7 +29,7 @@
 
   *) Run extensive memory leak checks on SSL apps. Fixed *lots* of memory
      leaks in ssl/ relating to new X509_get_pubkey() behaviour. Also fixes
-     in apps/ and an unrellated leak in crypto/dsa/dsa_vrf.c
+     in apps/ and an unrelated leak in crypto/dsa/dsa_vrf.c
      [Steve Henson]
 
   *) Support for RAW extensions where an arbitrary extension can be
